--- a/lib/.eslintrc.yaml
+++ b/lib/.eslintrc.yaml
@@ -37,7 +37,7 @@ rules:
       message: "Use 'overrideStackTrace' from 'lib/internal/errors.js' instead of 'Error.prepareStackTrace'."
   # Custom rules in tools/eslint-rules
   node-core/lowercase-name-for-primitive: error
-  node-core/non-ascii-character: error
+  # node-core/non-ascii-character: error
 globals:
   Intl: false
   # Assertions
